--- a/src/manifest.firefox.json
+++ b/src/manifest.firefox.json
@@ -36,9 +36,21 @@
     "scripts": ["background.js"]
   },
   
+  "icons": {
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
+  },
+  
   "action": {
     "default_popup": "popup.html",
-    "default_title": "RSC Detector"
+    "default_title": "RSC Detector",
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "32": "icons/icon-32.png",
+      "48": "icons/icon-48.png"
+    }
   },
   
   "content_scripts": [
